@@ -42,7 +42,7 @@ p+aes(colour=demographic)+
 p+aes(linetype=demographic)+
   scale_linetype(guide="none")
 ## no color, just direct labels
-data(BodyWeight,package="nlme")
+data("BodyWeight",package="nlme")
 bwbase <- ggplot(BodyWeight,aes(Time,weight,label=Rat))+
   geom_line(aes(group=Rat))+
   facet_grid(.~Diet)
